auto force merge manager
Code Spotless Fixes

Signed-off-by: Harsh Kothari <techarsh@amazon.com>